# BitcoinPrediction

./: .gitignore  Pasted-Collecting-usage-statistics-To-deactivate-set-browser-gatherUsageStats-to-false-You-can-no-1728317166121.txt  data_fetcher.py  main.py  ml_model.py  pyproject.toml  requirements.txt  sentiment_analyzer.py  visualizer.py
