[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "newsapi-python>=0.2.7",
    "nltk>=3.9.1",
    "pandas>=1.5.3,<1.6.0",
    "plotly>=5.24.1",
    "scikit-learn>=1.2.2,<1.3.0",
    "streamlit>=1.22.0,<1.23.0",
    "tensorflow>=2.12.0,<2.13.0",
    "yfinance>=0.2.18,<0.3.0",
    "textblob>=0.15.3",
    "numpy>=1.22.0,<1.24.0",
]
